--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -1,1 +1,113 @@
-<p>confirm-infor-contract works!</p>
+<!-- form step 4 -->
+<form  id="msform">
+  <div class="labelOrg">HỢP ĐỒNG</div>
+  <div class="infor_contact">
+    <div class="row">
+      <div class="col-md-5">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <div class="label_item">Tên file hợp đồng</div>
+              <div class="input-group">
+                <input type="text" id="contractName" class="form-control" formControlName="contractName" readonly/>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="form-group">
+              <div class="label_item">Ngày hết hạn ký</div>
+              <div class="input-group">
+                <input type="text" id="contractName" class="form-control" formControlName="contractName" readonly/>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2"></div>
+      <div class="col-md-5">
+        <div class="form-group">
+          <div class="label_item">Lời nhắn</div>
+          <div class="input-group">
+            <input type="text" id="contractName" class="form-control" formControlName="contractName" readonly/>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="labelOrg">CÁC BÊN KÝ</div>
+  <div class="determine_contact">
+    <div class="user_contact">
+      <div>CÔNG TY TNHH ABC</div>
+      <hr>
+      <div class="row">
+        <div class="col-md-5">
+          <div class="form-group">
+            <div class="label_item">Người xem xét</div>
+            <div class="input-group">
+              <input type="text" id="contractNumber" class="form-control" formControlName="contractNumber" readonly/>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-5">
+          <div class="form-group">
+            <div class="label_item">Người ký</div>
+            <div class="input-group">
+              <input type="text" id="contractType" class="form-control" formControlName="contractType" readonly/>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-5">
+          <div class="form-group">
+            <div class="label_item">Văn thư</div>
+            <div class="input-group">
+              <input type="text" id="contractNumber" class="form-control" formControlName="contractNumber" readonly/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="partner_contact">
+      <div>CÔNG TY TNHH ABC</div>
+      <hr>
+      <div class="row">
+        <div class="col-md-5">
+          <div class="form-group">
+            <div class="label_item">Người xem xét</div>
+            <div class="input-group">
+              <input type="text" id="contractNumber" class="form-control" formControlName="contractNumber" readonly/>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2"></div>
+        <div class="col-md-5">
+          <div class="form-group">
+            <div class="label_item">Người ký</div>
+            <div class="input-group">
+              <input type="text" id="contractType" class="form-control" formControlName="contractType" readonly/>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-5">
+          <div class="form-group">
+            <div class="label_item">Văn thư</div>
+            <div class="input-group">
+              <input type="text" id="contractNumber" class="form-control" formControlName="contractNumber" readonly/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
+
