--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.scss
@@ -1,165 +1,48 @@
-//style form
-#msform {
-  text-align: center;
-  position: relative;
-  margin-top: 5px;
+::ng-deep .mat-form-field {
+  width: 100%;
+
+  .mat-form-field-flex {
+    padding: 0 .75em 0 .75em !important;
+    background: white;
+    border: 1px solid #ced4da !important;
+    border-radius: .25rem;
+  }
+  .mat-form-field-underline {
+    position: absolute;
+    width: 0%;
+  }
+  .mat-form-field-wrapper {
+    padding-bottom: 0;
+  }
 }
 
-#msform fieldset {
-  background: white;
-  border: 0 none;
-  border-radius: 0px;
-  // box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-  padding: 20px 30px;
-  box-sizing: border-box;
-  // width: 80%;
-  // margin: 0 10%;
-  position: relative;
-}
-
-#msform fieldset:not(:first-of-type) {
+//upload file
+input[type="file"] {
   display: none;
 }
-
-//style input
-#msform input, #msform textarea {
-  padding: 15px;
+.custom-file-upload {
   border: 1px solid #ccc;
-  border-radius: 0px;
-  margin-bottom: 10px;
-  width: 100%;
-  box-sizing: border-box;
-  color: #2C3E50;
-  font-size: 13px;
-}
-
-#msform input:focus, #msform textarea:focus {
-  -moz-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  border: 1px solid #106DB6;
-  outline-width: 0;
-  transition: All 0.5s ease-in;
-  -webkit-transition: All 0.5s ease-in;
-  -moz-transition: All 0.5s ease-in;
-  -o-transition: All 0.5s ease-in;
-}
-
-//style button
-#msform .action-button {
-  width: 100px;
-  background: #106DB6;
-  font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 25px;
+  display: inline-block;
+  padding: 6px 12px;
   cursor: pointer;
-  padding: 10px 5px;
-  margin: 10px 5px;
-}
-
-#msform .action-button:hover, #msform .action-button:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #106DB6;
-}
-
-#msform .action-button-previous {
-  width: 100px;
-  background: #C5C5F1;
-  font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 25px;
-  cursor: pointer;
-  padding: 10px 5px;
-  margin: 10px 5px;
-}
-
-#msform .action-button-previous:hover, #msform .action-button-previous:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #C5C5F1;
-}
-
-//style step by step
-#progressbar {
-  // margin-bottom: 30px;
-  overflow: hidden;
-  /*CSS counters to number the steps*/
-  counter-reset: step;
-  padding: 0;
-}
-
-#progressbar li {
-  list-style-type: none;
   color: #106DB6;
-  text-transform: uppercase;
-  font-size: 12px;
-  width: 25%;
-  float: left;
-  position: relative;
-  letter-spacing: 1px;
-}
-
-#progressbar li:before {
-  content: counter(step);
-  counter-increment: step;
-  width: 24px;
-  height: 24px;
-  line-height: 26px;
-  display: block;
-  font-size: 12px;
-  color: #333;
-  background: #333  ;
-  border-radius: 25px;
-  margin: 0 auto 10px auto;
-}
-
-//style connect step
-#progressbar li:after {
-  content: '';
   width: 100%;
-  height: 2px;
-  background: #CCCCCC;
-  position: absolute;
-  left: -50%;
-  top: 9px;
-  z-index: 1; /*put it behind the numbers*/
+  border-radius: 20px;
 }
 
-#progressbar li:first-child:after {
-  /*connector not needed before the first step*/
-  content: none;
+//label type contract
+.label_type{
+  text-align: center;
+  font-weight: 500;
+  padding: 10px;
 }
 
-//style step active
-#progressbar li.active:before {
-  background: #106DB6;
-  color: white;
-  z-index: 2;
-  position: relative;
+//label item form
+.label_item{
+  padding: 10px 0px 5px;
+  color: #5e5e5e;
 }
 
-#progressbar li.active:after {
-  background: #106DB6;
-  color: white;
-  z-index: 1;
-  position: absolute;
-}
-
-// #progressbar li.active:before, #progressbar li.active:after {
-//   background: #106DB6;
-//   color: white;
-//   z-index: 2;
-//   position: relative;
-// }
-
-#progressbar li.inactive:before{
-  background: white;
-  color: #000;
-  border: 1px solid #87CAFF;
-  z-index: 2;
-  position: relative;
-}
-
-//style current active
-#progressbar li span.current_active {
-  font-weight: 800;
+.require_star{
+  color: red;
 }
