--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -1,4 +1,7 @@
 <div class="col-md-12 col-md-offset-3" style="display: flex">
+  <button *ngIf="step == 'determine-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+  <button *ngIf="step == 'sample-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+
   <!-- step by step -->
   <div class="activity-card col" style="padding: 10px;text-align: center;">
     <ul id="progressbar">
@@ -16,6 +19,6 @@
   <button *ngIf="step == 'infor-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>
   <button *ngIf="step == 'determine-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>
   <button *ngIf="step == 'sample-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>
-  <button *ngIf="step == 'confirm-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>
+<!--  <button *ngIf="step == 'confirm-contract'" class="pull-right" (click)="next()" type="button" name="next" class="next action-button">Tiếp theo</button>-->
 
 </div>
