--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.html
@@ -5,7 +5,7 @@
       <label style="padding-bottom: 10px" class="label">CÁC THÀNH PHẦN (<span style="color: red">KÉO THẢ</span>)</label>
       <!--      <div>-->
       <div *ngFor="let d of this.datas.contract_user_sign" class="show-list-name-class"
-           style="display: inline-block; margin-bottom: 10px; margin-right: 5px">
+           style="display: inline-block; margin-bottom: 15px">
         <div *ngIf="!d.sign_config.position" class="resize-drag" (click)="showThumbnail()" [id]=getIdSignChuaKeo(d.id)>
           <div class="signature-sample-drag" style="position: relative">
             <div *ngIf="d.sign_unit == 'so_tai_lieu' || d.sign_unit == 'text'" [ngStyle]="setWidth(d)"
@@ -14,8 +14,8 @@
             <div *ngIf="d.sign_unit == 'chu_ky_so' || d.sign_unit == 'chu_ky_anh'" class="content-drag"
                  id="element-drag"
                  style="height: 102px; flex-direction: column" [ngStyle]="setWidth(d)">
-              <img [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'"
-                   alt="ck.mobifone">
+              <img [src]="d.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" [style.paddingBottom]="d.sign_unit == 'chu_ky_anh' ? '3px' : ''"
+                   alt="ck.mobifone" >
               <span
                 *ngIf="d.sign_unit == 'chu_ky_anh' || d.sign_unit == 'chu_ky_so'">{{d.sign_unit == 'chu_ky_anh' ? 'Chữ ký ảnh' : 'Chữ ký số'}}</span>
             </div>
@@ -27,43 +27,54 @@
 
     </div>
     <hr>
-    <div class="sample-contract__information--user-sign">
-      <label class="label">THUỘC TÍNH</label>
-      <label class="label-require">Người ký: *</label>
-      <!--      <select name="select-user-sign" class="select-text">-->
-      <!--        <option value="1">Option 1</option>-->
-      <!--        <option value="2">Option 2</option>-->
-      <!--        <option value="3">Option 3</option>-->
-      <!--      </select>-->
-    </div>
-    <hr>
-    <div class="flex-column">
-      <label class="label-require">Vị trí: *</label>
-      <div class="location">
-        <div class="location-drag">
-          <span class="label" style="font-size: 13px">x:</span>
+
+    <div class="location-change" [ngStyle]="changeDisplay()">
+      <div class="sample-contract__information--user-sign">
+        <label class="label">THUỘC TÍNH</label>
+        <div class="name-text">
+          <label class="label-require">Tên trường: *</label>
           <input type="text">
         </div>
-        <div class="location-drag">
-          <span class="label" style="font-size: 13px">y:</span>
-          <input type="text">
+        <div class="sign-unit-select">
+          <label class="label-require">Người ký: *</label>
+          <select class="form-select" aria-label="Default select example">
+            <option value="3">Phạm Minh Chính</option>
+            <option value="1">Đỗ Thành Dương</option>
+            <option value="2">Phạm Văn Lâm</option>
+          </select>
+        </div>
+
+      </div>
+      <hr>
+      <div class="flex-column">
+        <label class="label-require">Vị trí</label>
+        <div class="location">
+          <div class="location-drag">
+            <span class="label">X:</span>
+            <input id="input-location-x" type="text">
+          </div>
+          <div class="location-drag">
+            <span class="label">Y:</span>
+            <input type="text">
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="flex-column">
+        <label class="label-require">Kích thước</label>
+        <div class="location">
+          <div class="location-drag">
+            <span class="label" style="font-size: 13px">Chiều dài</span>
+            <input type="text">
+          </div>
+          <div class="location-drag">
+            <span class="label" style="font-size: 13px">Chiều rộng</span>
+            <input type="text">
+          </div>
         </div>
       </div>
     </div>
-    <hr>
-    <div class="flex-column">
-      <label class="label-require">Kích thước: *</label>
-      <div class="location">
-        <div class="location-drag">
-          <span class="label" style="font-size: 13px">Chiều dài:</span>
-          <input type="text">
-        </div>
-        <div class="location-drag">
-          <span class="label" style="font-size: 13px">Chiều rộng:</span>
-          <input type="text">
-        </div>
-      </div>
-    </div>
+
   </div>
 
   <!--  file content-->
