fix progressbar add contract

--- a/src/app/login/forgot-password/forgot-password.component.html
+++ b/src/app/login/forgot-password/forgot-password.component.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="form-group">
-              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
+              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
                 <strong>{{errorDetail}}</strong>
               </p>
             </div>
