--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -55,11 +55,11 @@
            </div>
 
            <div class="form-group" style="text-align: right;">
-             <a href="/forgot-password" style="text-decoration: underline; color: -webkit-link; cursor: pointer;">Quên mật khẩu?</a>
+             <a href="/forgot-password" style="text-decoration: none; color: #7b7a7a;font-weight: 500;; cursor: pointer;">Quên mật khẩu?</a>
            </div>
 
            <div class="form-group">
-             <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
+             <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
                <strong>{{errorDetail}}</strong>
              </p>
            </div>
@@ -69,7 +69,7 @@
            </div>
 
            <div class="form-group" style="text-align: center;">
-            <b>Bạn chưa có tài khoản?</b>&nbsp;<a href="#">Đăng ký</a>
+            <b>Bạn chưa có tài khoản?</b>&nbsp;<a href="#" style="text-decoration: none;color: #7b7a7a;font-weight: 500;">Đăng ký</a>
           </div>
          </form>
 
