--- a/src/app/login/reset-password/reset-password.component.html
+++ b/src/app/login/reset-password/reset-password.component.html
@@ -62,7 +62,7 @@
             </div>
 
             <div class="form-group">
-              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center;">
+              <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center; font-size: 15px;">
                 <strong>{{errorDetail}}</strong>
               </p>
             </div>
