--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -1,14 +1,23 @@
 <div class="col-md-12 col-md-offset-3">
   <!-- step by step -->
-  <div class="activity-card" style="padding: 10px;text-align: center;">
+  <div style="padding: 10px;text-align: center;">
     <ul id="progressbar">
-      <li [ngClass]="step>=1 ? 'active ' : 'inactive'"><span
-        [ngClass]="{'current_active' : step==1}">Thông tin tài liệu</span></li>
-      <li [ngClass]="step>=2 ? 'active' : 'inactive'"><span
-        [ngClass]="{'current_active' : step==2}">Xác định người ký</span></li>
-      <li [ngClass]="step>=3 ? 'active' : 'inactive'"><span
-        [ngClass]="{'current_active' : step==3}">Thiết kế tài liệu</span></li>
-      <li [ngClass]="step==4 ? 'active' : 'inactive'"><span [ngClass]="{'current_active' : step==4}">Xác nhận và hoàn tất</span>
+      <li [ngClass]="(step == 'infor-contract' || step == 'determine-contract' ||
+                      step == 'sample-contract' || step == 'confirm-contract') ? 'active ' : 'inactive'">
+        <div [ngClass]="{'current_active' : step == 'infor-contract'}">Thông tin tài liệu</div>
+      </li>
+
+      <li [ngClass]="(step == 'determine-contract' || step == 'sample-contract' ||
+                     step == 'confirm-contract') ? 'active' : 'inactive'">
+        <div [ngClass]="{'current_active' : step == 'determine-contract'}">Xác định người ký</div>
+      </li>
+
+      <li [ngClass]="(step == 'sample-contract' || step == 'confirm-contract') ? 'active' : 'inactive'">
+        <div [ngClass]="{'current_active' : step == 'sample-contract'}">Thiết kế tài liệu</div>
+      </li>
+
+      <li [ngClass]="step == 'confirm-contract' ? 'active' : 'inactive'">
+        <div [ngClass]="{'current_active' : step == 'confirm-contract'}">Xác nhận và hoàn tất</div>
       </li>
     </ul>
   </div>
