--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.scss
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.scss
@@ -1,72 +1,3 @@
-//style form
-#msform {
-  text-align: center;
-  position: relative;
-  margin-top: 5px;
-}
-
-#msform fieldset {
-  background: white;
-  border: 0 none;
-  border-radius: 0px;
-  // box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-  padding: 20px 30px;
-  box-sizing: border-box;
-  // width: 80%;
-  // margin: 0 10%;
-  position: relative;
-}
-
-#msform fieldset:not(:first-of-type) {
-  display: none;
-}
-
-
-#msform input:focus, #msform textarea:focus {
-  -moz-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-  border: 1px solid #106DB6;
-  outline-width: 0;
-  transition: All 0.5s ease-in;
-  -webkit-transition: All 0.5s ease-in;
-  -moz-transition: All 0.5s ease-in;
-  -o-transition: All 0.5s ease-in;
-}
-
-//style button
-#msform .action-button {
-  width: 100px;
-  background: #106DB6;
-  font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 25px;
-  cursor: pointer;
-  padding: 10px 5px;
-  margin: 10px 5px;
-}
-
-#msform .action-button:hover, #msform .action-button:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #106DB6;
-}
-
-#msform .action-button-previous {
-  width: 100px;
-  background: #C5C5F1;
-  font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 25px;
-  cursor: pointer;
-  padding: 10px 5px;
-  margin: 10px 5px;
-}
-
-#msform .action-button-previous:hover, #msform .action-button-previous:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #C5C5F1;
-}
-
 //style step by step
 #progressbar {
   // margin-bottom: 30px;
@@ -111,6 +42,7 @@
   left: -50%;
   top: 9px;
   z-index: 1; /*put it behind the numbers*/
+  height: 5px;
 }
 
 #progressbar li:first-child:after {
@@ -131,6 +63,7 @@
   color: white;
   z-index: 1;
   position: absolute;
+  height: 5px;
 }
 
 // #progressbar li.active:before, #progressbar li.active:after {
@@ -149,12 +82,11 @@
 }
 
 //style current active
-#progressbar li span.current_active {
-  font-weight: 800;
+#progressbar li div.current_active {
+  font-weight: 600;
 }
 
-
-//style input
+//style button previous
 .button_previous {
   //padding: 15px;
   border: 0px;
@@ -169,7 +101,7 @@
   float: left;
 }
 
-//style input
+//style button next
 .button_next {
   //padding: 15px;
   border: 0px;
