--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -90,6 +90,7 @@ header {
   background-repeat: no-repeat;
   background-image: url(../../assets/img/user_login.png);
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .dropdown-toggle::after {
