--- a/src/app/main/sidebar/sidebar.component.scss
+++ b/src/app/main/sidebar/sidebar.component.scss
@@ -193,7 +193,7 @@
 
       .sidebar-dropdown {
         >a:after {
-          font-family: "Font Awesome 5 Free";
+          font-family: 'FontAwesome';
           font-weight: 900;
           content: "\f105";
           display: inline-block;
@@ -226,7 +226,7 @@
             a {
               &:before {
                 content: "\f111";
-                font-family: "Font Awesome 5 Free";
+                font-family: 'FontAwesome';
                 font-weight: 400;
                 font-style: normal;
                 display: inline-block;
@@ -425,7 +425,7 @@ $bg-scrollbar :#636363;
 
 // colors with backgound image
 $img-bg-sidebar-wrapper : rgba(183, 206, 250, 0.1);
-$img-border-color : #0c2be21a;
+$img-border-color : #8d8b8b26;
 $img-bg-footer :rgba(43, 43, 43, 0.5);
 $img-shadow-color:rgba(0, 0, 0, 0.5);
 
@@ -466,7 +466,7 @@ $img-shadow-color:rgba(0, 0, 0, 0.5);
   .sidebar-footer>div>a:hover i,
   #close-sidebar:hover {
     color: $hover-color !important;
-    background-color: #bbd2ff;
+    background-color: #c5ebff;
   }
 
   ul li:hover a i,
