--- a/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
+++ b/src/app/main/contract/shared/model/confirm-infor-contract/confirm-infor-contract.component.html
@@ -1,5 +1,5 @@
 <!-- form step 4 -->
-<form  id="msform">
+<form [formGroup]="confirmForm" id="msform">
   <div class="labelOrg">HỢP ĐỒNG</div>
   <div class="infor_contact">
     <div class="row">
@@ -9,7 +9,7 @@
             <div class="form-group">
               <div class="label_item">Tên file hợp đồng</div>
               <div class="input-group">
-                <input type="text" id="contractName" class="form-control" formControlName="contractName" readonly/>
+                <input type="text" id="contractFile" class="form-control" formControlName="contractFile" readonly/>
               </div>
             </div>
           </div>
@@ -19,7 +19,7 @@
             <div class="form-group">
               <div class="label_item">Ngày hết hạn ký</div>
               <div class="input-group">
-                <input type="text" id="contractName" class="form-control" formControlName="contractName" readonly/>
+                <input type="text" id="dateDeadline" class="form-control" formControlName="dateDeadline" readonly/>
               </div>
             </div>
           </div>
@@ -30,7 +30,7 @@
         <div class="form-group">
           <div class="label_item">Lời nhắn</div>
           <div class="input-group">
-            <input type="text" id="contractName" class="form-control" formControlName="contractName" readonly/>
+            <input type="text" id="comment" class="form-control" formControlName="comment" readonly/>
           </div>
         </div>
       </div>
@@ -47,7 +47,7 @@
           <div class="form-group">
             <div class="label_item">Người xem xét</div>
             <div class="input-group">
-              <input type="text" id="contractNumber" class="form-control" formControlName="contractNumber" readonly/>
+              <input type="text" id="userViews" class="form-control" formControlName="userViews" readonly/>
             </div>
           </div>
         </div>
@@ -56,7 +56,7 @@
           <div class="form-group">
             <div class="label_item">Người ký</div>
             <div class="input-group">
-              <input type="text" id="contractType" class="form-control" formControlName="contractType" readonly/>
+              <input type="text" id="userSigns" class="form-control" formControlName="userSigns" readonly/>
             </div>
           </div>
         </div>
@@ -67,7 +67,7 @@
           <div class="form-group">
             <div class="label_item">Văn thư</div>
             <div class="input-group">
-              <input type="text" id="contractNumber" class="form-control" formControlName="contractNumber" readonly/>
+              <input type="text" id="userDocs" class="form-control" formControlName="userDocs" readonly/>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
           <div class="form-group">
             <div class="label_item">Người xem xét</div>
             <div class="input-group">
-              <input type="text" id="contractNumber" class="form-control" formControlName="contractNumber" readonly/>
+              <input type="text" id="partnerViews" class="form-control" formControlName="partnerViews" readonly/>
             </div>
           </div>
         </div>
@@ -91,7 +91,7 @@
           <div class="form-group">
             <div class="label_item">Người ký</div>
             <div class="input-group">
-              <input type="text" id="contractType" class="form-control" formControlName="contractType" readonly/>
+              <input type="text" id="partnerSigns" class="form-control" formControlName="partnerSigns" readonly/>
             </div>
           </div>
         </div>
@@ -102,7 +102,7 @@
           <div class="form-group">
             <div class="label_item">Văn thư</div>
             <div class="input-group">
-              <input type="text" id="contractNumber" class="form-control" formControlName="contractNumber" readonly/>
+              <input type="text" id="partnerDocs" class="form-control" formControlName="partnerDocs" readonly/>
             </div>
           </div>
         </div>
