edit profile user login

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,10 +10,10 @@
         <div class="social-icons" ngbDropdownToggle>
             <div></div>
         </div>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1" style="margin-top: 10px; border-color: #368ee0;">
-          <button ngbDropdownItem style="padding: 10px;">Tài khoản</button>
-          <button ngbDropdownItem style="padding: 10px;" (click)="open(mymodal)">Đổi mật khẩu</button>
-          <button ngbDropdownItem style="padding: 10px;" routerLink="/login" (click)="logout()">Đăng xuất</button>
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic1" style="margin-top: 10.5px; border-color: #368ee0;">
+          <button ngbDropdownItem style="padding: 10px; color:#106DB6"><i style="width: 20px" class="fa fa-user"></i>Tài khoản</button>
+          <button ngbDropdownItem style="padding: 10px; color:#106DB6" (click)="open(mymodal)"><i style="width: 20px" class="fa fa-unlock-alt"></i>Đổi mật khẩu</button>
+          <button ngbDropdownItem style="padding: 10px; color: #ED1C24" routerLink="/login" (click)="logout()"><i style="width: 20px" class="fa fa-sign-out"></i>Đăng xuất</button>
         </div>
       </div>
 
