valid step next and create button back step, valid data, change form step 2, convert base64 file content hop dong to url step 3

--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -82,6 +82,7 @@
 <!--  </div>-->
 <!--</div>-->
 
+<!--xử lý gọi các component trong các step theo từng điều kiện-->
 <div class="container-fluid">
   <app-contract-header #contractHeader [AddComponent]="this" [datas]="datas" [step]="step" (stepChange)="getStep()"></app-contract-header>
   <ng-container>
