--- a/src/app/main/contract/shared/model/contract-header/contract-header.component.html
+++ b/src/app/main/contract/shared/model/contract-header/contract-header.component.html
@@ -1,6 +1,7 @@
 <div class="col-md-12 col-md-offset-3" style="display: flex">
   <button *ngIf="step == 'determine-contract'" (click)="back($event, 'infor-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
   <button *ngIf="step == 'sample-contract'" (click)="back($event, 'determine-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>
+<!--  <button *ngIf="step == 'confirm-contract'" (click)="back($event, 'confirm-contract')" type="button" name="next" class="next action-button" style="background-color: #8B8B8B">Quay lại</button>-->
 
   <!-- step by step -->
   <div class="activity-card col" style="padding: 10px;text-align: center;">
